# aida-conll-yago-wikidata

./: .gitattributes  Cargo.toml  README.md
data/: AIDA-YAGO2-dataset.tsv
src/: main.rs
