[package]
name = "aida-conll-yago-wikidata"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["cyanic-selkie <cyanic-selkie@protonmail.com>"]
description = "A program for translating the AIDA CoNLL-YAGO dataset to use Wikidata QIDs instead of Wikipedia titles for entity identifiers."
readme = "README.md"
repository = "https://github.com/cyanic-selkie/wdrdf2graph"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.14.0"
arrow2 = { version = "0.16.0", features = ["io_parquet_zstd", "io_parquet"] }
arrow2_convert = "0.4.2"
clap = { version = "4.1.11", features = ["derive"] }
hashbrown = "0.13.2"
itertools = "0.10.5"
lazy-regex = "2.5.0"
serde = { version = "1.0.158", features = ["derive"] }
unicode-normalization = "0.1.22"
uuid = { version = "1.3.0", features = ["fast-rng", "v4"] }
